--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="/Volumes/Data/Users/sameercheema/Downloads/Train-Scheduler-master 2/script.js"></script>
+    <script src="./script.js"></script>
 
   </body>
 
